<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <LinearLayout
        android:id="@+id/login_layout_01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/taxi"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_layout_02">


        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/taxi_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:text="@string/app_name"
            android:textSize="50dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout_02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_layout_01"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/Tag_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/login_btn_design"
            android:text="@string/Login_Btn_1_text"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@drawable/login_btn_design"
                android:drawableLeft="@drawable/google"
                android:paddingLeft="10dp"
                android:text="@string/Login_Btn_2_text"
                android:textStyle="bold" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/login_btn_design"
                android:drawableLeft="@drawable/fb_logo"
                android:paddingLeft="10dp"
                android:text="@string/Login_Btn_3_text"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_condition_text"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp" />


    </LinearLayout>



</android.support.constraint.ConstraintLayout>